@@ -6,6 +6,7 @@
 # our case updates are distributed through flathub.
 exec java \
     -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication \
+    --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector \
     --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED \
     -DexternalUpdateCheck \
     -jar /app/share/de.mediathekview.MediathekView/MediathekView.jar \
